[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "cjm-fasthtml-virtual-scrollbar"
dynamic = ["version"]
description = "FastHTML virtual scrollbar component with drag-to-scrub, click-to-jump, and position indication for discrete-navigation containers."
readme = "README.md"
requires-python = ">=3.12"
license = {text = "Apache-2.0"}
authors = [{name = "Christian J. Mills", email = "9126128+cj-mills@users.noreply.github.com"}]
keywords = ['nbdev', 'jupyter', 'notebook', 'python']
classifiers = ["Natural Language :: English", "Intended Audience :: Developers", "Development Status :: 3 - Alpha", "Programming Language :: Python :: 3", "Programming Language :: Python :: 3 :: Only"]
dependencies = ['python-fasthtml', 'cjm-fasthtml-app-core>=0.0.17', 'cjm-fasthtml-tailwind>=0.0.44', 'cjm-fasthtml-daisyui', 'cjm-fasthtml-design-system>=0.0.8']

[project.urls]
Repository = "https://github.com/cj-mills/cjm-fasthtml-virtual-scrollbar"
Documentation = "https://cj-mills.github.io/cjm-fasthtml-virtual-scrollbar"

[project.entry-points.nbdev]
cjm_fasthtml_virtual_scrollbar = "cjm_fasthtml_virtual_scrollbar._modidx:d"

[tool.setuptools.dynamic]
version = {attr = "cjm_fasthtml_virtual_scrollbar.__version__"}

[tool.setuptools.packages.find]
include = ["cjm_fasthtml_virtual_scrollbar*"]

[tool.nbdev]
